ANode/test/data/SMSHOME2/bad/bad.ecf

# test for unterminated manual

%manual
	OPERATORS: This is an example of using a manual
